02-ingress/manifests/ingress-nginx-webhooks.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"admission-webhook","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.3.1"},"name":"ingress-nginx-admission"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"service":{"name":"ingress-nginx-controller-admissio [...]
    creationTimestamp: "2026-03-03T01:00:14Z"
    generation: 3
    labels:
      app.kubernetes.io/component: admission-webhook
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
      app.kubernetes.io/version: 1.3.1
    name: ingress-nginx-admission
    resourceVersion: "697248"
    uid: e8c83909-3e07-4dba-9894-e7923747a99a
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkVENDQVJxZ0F3SUJBZ0lQWHVudkVyRTRNM1poR1VzMG9WMG1NQW9HQ0NxR1NNNDlCQU1DTUE4eERUQUwKQmdOVkJBb1RCRzVwYkRFd0lCY05Nall3TXpBek1EYzFNakF4V2hnUE1qRXlOakF5TURjd056VXlNREZhTUE4eApEVEFMQmdOVkJBb1RCRzVwYkRFd1dUQVRCZ2NxaGtqT1BRSUJCZ2dxaGtqT1BRTUJCd05DQUFUbzZjY3pjSzVzCmtyMzNhMi9XSUNSQkpCdGVUWDJobm9qZEF2VE9YeVJaa2c4d3YvbjVHK0xZQUJ6a0JEYTVJREx2c2pDMEN1cDcKQTJnL1AyTkE5K1o4bzFjd1ZUQU9CZ05WSFE4QkFmOEVCQU1DQWdRd0V3WURWUjBsQkF3d0NnWUlLd1lCQlFVSApBd0V3RHdZRFZS [...]
      service:
        name: ingress-nginx-controller-admission
        namespace: ingress-nginx
        path: /networking/v1/ingresses
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validate.nginx.ingress.kubernetes.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{},"creationTimestamp":null,"name":"metallb-webhook-configuration"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"service":{"name":"metallb-webhook-service","namespace":"metallb-system","path":"/validate-metallb-io-v1beta2-bgppeer"}},"failurePolicy":"Fail","name":"bgppeersvalidationwebhook.metallb.io","rules":[{"apiGroups":["metallb.io"],"apiVersions":["v1bet [...]
    creationTimestamp: "2026-03-03T02:03:19Z"
    generation: 3
    name: metallb-webhook-configuration
    resourceVersion: "697702"
    uid: 1cd93d70-1d27-42a0-9b99-1d1510e74525
  webhooks:
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta2-bgppeer
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bgppeersvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta2
      operations:
      - CREATE
      - UPDATE
      resources:
      - bgppeers
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-bfdprofile
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bfdprofilevalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - DELETE
      resources:
      - bfdprofiles
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-bgpadvertisement
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: bgpadvertisementvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - bgpadvertisements
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-community
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: communityvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - communities
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-ipaddresspool
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: ipaddresspoolvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ipaddresspools
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFRENDQWZpZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFoTVJBd0RnWURWUVFLRXdkdFpYUmgKYkd4aU1RMHdDd1lEVlFRREV3UmpaWEowTUI0WERUSTJNRE13TXpBMk5UazBOVm9YRFRNMk1ESXlPVEEzTlRrMApOVm93SVRFUU1BNEdBMVVFQ2hNSGJXVjBZV3hzWWpFTk1Bc0dBMVVFQXhNRVkyVnlkRENDQVNJd0RRWUpLb1pJCmh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT2FKNHV3Z2RKSmM3UXBEbzJJSGVsMkZ0bEpSVGZHRE1hRmoKa0ExbUtPemlNbSs3UWI2R21CbUNrUFNlMnZHOEI0VkVFdkxtSUNkMVY2dmpYNnUxUlM2alptSXBaWG45ektPZAp6UHFaS1VBcXpT [...]
      service:
        name: metallb-webhook-service
        namespace: metallb-system
        path: /validate-metallb-io-v1beta1-l2advertisement
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: l2advertisementvalidationwebhook.metallb.io
    namespaceSelector: {}
    objectSelector: {}
    rules:
    - apiGroups:
      - metallb.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - l2advertisements
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: ""
